# AI-Tools

./: .env.example  .gitignore  BLACKWELL_GPU_SUPPORT.md  CLAUDE.md  Dockerfile.pyspark  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  voice_transcribe.py
apps/audio-notes/: README.md  audio_notes.py  requirements.txt  run.bat
apps/live-captions/: .gitignore  CHANGELOG.md  Live Captions Tray.spec  Live Captions.spec  README.md  build.bat  build_time.txt  live_captions.py  live_captions_tray.py  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  test_live_captions.py  test_live_captions_tray.py
apps/mdns-broadcast/: CHANGELOG.md  README.md  mdns_broadcast.py  mdns_service.py  requirements.txt  service-manager.ps1  test_mdns_broadcast.py
integration/e2e/: conftest.py  test_asr_services.py  test_fastconformer_asr.py
notebooks/: benchmark_streaming_asr.ipynb
notebooks/helpers/: README.md  __init__.py  audio_generation.py  audio_upload.py  benchmark.py  config_ui.py  results_analysis.py
recordings/: README.md
scripts/: restart-docker.ps1
services/.docker/: mirrors.conf  setup-china-mirrors.sh
services/audio-notes/: CHANGELOG.md  Dockerfile  audio_notes.py  config.py  conftest.py  manifest.json  requirements.docker.txt
services/audio-summary/: Dockerfile  audio_summary.py  requirements.txt
services/fastconformer/: CHANGELOG.md  Dockerfile  README.md  download_models.sh  fastconformer_model.py  fastconformer_service.py  requirements.docker.txt  test_fastconformer_model.py  test_fastconformer_service.py
services/parakeet/: CHANGELOG.md  Dockerfile  README.md  audio.py  conftest.py  download_models.sh  model.py  parakeet_model.py  parakeet_service.py  requirements.docker.txt  test_audio.py  test_model.py  test_parakeet_model.py  test_parakeet_service.py
services/pyspark/: Dockerfile  jupyter_notebook_config.py  requirements.docker.txt
services/text-refiner/: CHANGELOG.md  Dockerfile  README.md  download_models.sh  requirements.docker.txt  test_text_refiner_service.py  text_refiner_service.py
services/transcription/: Dockerfile  README.md  requirements.docker.txt  transcription_service.py
services/vosk/: CHANGELOG.md  Dockerfile  README.md  download_model.sh  download_models.sh  requirements.docker.txt  test_vosk_service.py  vosk_service.py  vosk_service_test.py
services/web-gui/: Dockerfile  app.py  manifest.json  requirements.txt
services/whisper/: CHANGELOG.md  (+11 more)
shared/: __init__.py  gpu_memory.py  logging.py  text_refiner_client.py
(+137 files in other folders)
