[project]
name = "ai-tools"
version = "1.0.0"
description = "AI Tools - Speech recognition, transcription, and NLP services"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

exclude = [
    ".venv",
    ".ruff_cache",
    "build",
    "dist",
    "__pycache__",
    "*.spec",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (common in FastAPI)
    "SIM105", # Use contextlib.suppress (not always clearer)
    "SIM108", # Use ternary operator (can reduce readability)
    "SIM117", # Nested with statements (sometimes more readable)
    "E722",   # Bare except (sometimes needed for cleanup)
    "RUF001", # Ambiguous unicode (emoji in strings)
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Allow imports after sys.path manipulation
"apps/live-captions/live_captions_tray.py" = ["E402"]
# Allow imports after sys.modules manipulation for mocking
"services/text-refiner/test_text_refiner_service.py" = ["E402"]
# Allow unused imports for side effects (flash_attn availability check)
"services/whisper/whisper_service.py" = ["F401"]
# Allow redefinition of logger (module-specific logging)
"services/audio-notes/services/*.py" = ["F811"]
# Allow exception chaining flexibility in audio-notes API
"services/audio-notes/api/routes.py" = ["B904"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "src"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
  | notebooks
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps", "shared", "services", "tests"]
python_files = ["*_test.py", "test_*.py"]
markers = [
    "e2e: End-to-end tests (require Docker services running)",
]
# E2E test timeout (seconds) - prevents hanging tests, allows for model loading
timeout = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
